--- a/style.css
+++ b/style.css
@@ -6,19 +6,7 @@ body {
     width: 100%;
     height: 100%;
 }
-.menu ul {
-    display: inline-flex;
-    margin: 58px;
-}
 
-.menu ul li {
-   font-size: 20px;
-   font-weight: bold;
-   list-style: none;
-   margin: 0 20px;
-   color: #F29F05;
-   cursor: pointer;
-}
 
 .logo img {
    height: 100px;
@@ -76,14 +64,14 @@ body {
     cursor: pointer;
 }
 small {
-        margin-bottom: 50px;
-        margin-right: auto;
-        cursor: pointer;
-        font-size: 13px;
-        font-family: Arial, Helvetica, sans-serif;
-        color: #FFFFFF;
-        letter-spacing: 3px;
-        }
+    margin-top: 20px;
+    margin-left: 20px;
+    cursor: pointer;
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #FFFFFF;
+    letter-spacing: 3px;
+}
 .overview-picture {
     width: 50%;
     float: right;
@@ -161,11 +149,11 @@ small {
     margin-right: 60px;
     height: 250px;
     background-color: #56bccc;
-    }
+}
 .command-text{
     width: 50%;
     float: left;
-    }
+}
 .command-text h1 {
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
@@ -174,18 +162,18 @@ small {
     margin-top: 30px;
     margin-left: 60px;
     color: #000000;
-    }
+}
 .command-text p {
     width: 650px;
     font-size: 23px;
     margin: 20px 0 30px 60px;
     line-height: 25px;
     color: #000000;
-    }
+}
 .command-button {
     margin-left: 40px;
     display: inline-flex;
-    }
+}
 .command-button-inner {
     height: 50px;
     width: 50px;
@@ -196,30 +184,22 @@ small {
     background-clip: content-box, border-box;
     text-align: center;
     margin-left: 20px;
-    }
+}
 .command-button-inner .fa{
     padding: 15px 0 0 5px; 
     font-size: 20px;
     cursor: pointer;
-    }
-small {
-    margin: 0px;
-    cursor: pointer;
-    font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #FFFFFF;
-    letter-spacing: 3px;
-    }
+}
 .command-picture {
     width: 50%;
     float: right;
-    }
+}
 .command-picture img {
     max-width: auto;
     max-height: 200px;
     margin-top: 15px;
     margin-left: 200px;
-    }
+}
 
 
 .conflict_box {
@@ -228,11 +208,11 @@ small {
     margin-right: 60px;
     height: 250px;
     background-color: #6db2e3;
-    }
+}
 .conflict-text{
     width: 50%;
     float: left;
-    }
+ }
 .conflict-text h1 {
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
@@ -241,18 +221,18 @@ small {
     margin-top: 30px;
     margin-left: 60px;
     color: #000000;
-    }
+}
 .conflict-text p {
     width: 650px;
     font-size: 23px;
     margin: 20px 0 30px 60px;
     line-height: 25px;
     color: #000000;
-    }
+}
 .conflict-button {
     margin-left: 40px;
     display: inline-flex;
-    }
+ }
 .conflict-button-inner {
     height: 50px;
     width: 50px;
@@ -263,22 +243,22 @@ small {
     background-clip: content-box, border-box;
     text-align: center;
     margin-left: 20px;
-    }
+}
 .conflict-button-inner .fa{
     padding: 15px 0 0 5px; 
     font-size: 20px;
     cursor: pointer;
-    }
+}
 .conflict-picture {
     width: 50%;
     float: right;
-    }
+}
 .conflict-picture img {
     max-width: auto;
     max-height: 200px;
     margin-top: 15px;
     margin-left: 180px;
-    }
+}
 
 
 .branching_box {
@@ -287,11 +267,11 @@ small {
     margin-right: 60px;
     height: 250px;
     background-color: #deecf5;
-    }
+}
 .branching-text{
     width: 50%;
     float: left;
-    }
+}
 .branching-text h1 {
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
@@ -300,18 +280,18 @@ small {
     margin-top: 30px;
     margin-left: 60px;
     color: #000000;
-    }
+}
 .branching-text p {
     width: 650px;
     font-size: 23px;
     margin: 20px 0 30px 60px;
     line-height: 25px;
     color: #000000;
-    }
+}
 .branching-button {
     margin-left: 40px;
     display: inline-flex;
-    }
+}
 .branching-button-inner {
     height: 50px;
     width: 50px;
@@ -322,22 +302,22 @@ small {
     background-clip: content-box, border-box;
     text-align: center;
     margin-left: 20px;
-    }
+}
 .branching-button-inner .fa{
     padding: 15px 0 0 5px; 
     font-size: 20px;
     cursor: pointer;
-    }
+}
 .branching-picture {
     width: 50%;
     float: right;
-    }
+}
 .branching-picture img {
     max-width: auto;
     max-height: 250px;
     margin-top: 15px;
     margin-left: 200px;
-    }
+}
 
 
 .extra_box {
@@ -346,11 +326,11 @@ small {
     margin-right: 60px;
     height: 250px;
     background-color: #73D9CF;
-    }
+}
 .extra-text{
     width: 50%;
     float: left;
-    }
+}
 .extra-text h1 {
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
@@ -359,18 +339,18 @@ small {
     margin-top: 30px;
     margin-left: 60px;
     color: #000000;
-    }
+}
 .extra-text p {
     width: 650px;
     font-size: 23px;
     margin: 20px 0 30px 60px;
     line-height: 25px;
     color: #000000;
-    }
+}
 .extra-button {
     margin-left: 40px;
     display: inline-flex;
-    }
+}
 .extra-button-inner {
     height: 50px;
     width: 50px;
@@ -381,24 +361,86 @@ small {
     background-clip: content-box, border-box;
     text-align: center;
     margin-left: 20px;
-    }
+}
 .extra-button-inner .fa{
     padding: 15px 0 0 5px; 
     font-size: 20px;
     cursor: pointer;
-    }
+}
 .extra-picture {
     width: 50%;
     float: right;
-    }
+}
 .extra-picture img {
     max-width: auto;
     max-height: 200px;
     margin-top: 15px;
     margin-left: 200px;
-    }
+}
 
+/* Dropdown Button */
+.dropbtn {
+    background-color: #F29F05;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    margin-top: -100px;
+    margin-left: 30px;
+}
+  
+  /* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+  /* Links inside the dropdown */
+.dropdown-content a {
+    color: #000000;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+  /* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #FFFFFF;
+}
+  
+  /* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #F29F05;
+}
 
+.menu ul {
+    display: inline-flex;
+    margin: 58px;
+}
+
+.menu ul li {
+   font-size: 20px;
+   font-weight: bold;
+   list-style: none;
+   margin: 0 20px;
+   color: #F29F05;
+   cursor: pointer;
+}
 
 
 
