--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background-color:#FFFFBE;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #container {
@@ -7,14 +9,45 @@ body {
     height: 100%;
 }
 
-
-.logo img {
-   height: 100px;
-   width: 70px;
-   margin-top: -30px;
-   margin-left: -50px;
+.navbar{
+    background-color: #FFFFBE;
+    overflow: hidden;
+    height: auto;
 }
 
+.navbar a{
+    float: left;
+    color: #F29F05;
+    text-align:center;
+    padding: 20px 16px;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.navbar a:hover {
+    background-color: #F29F05;
+    color: white; 
+}
+
+.navbar ul {
+    display: inline-flex;
+    margin: 65px;
+}
+
+.navbar ul li {
+   font-size: 20px;
+   font-weight: bold;
+   list-style: none;
+   color: #F29F05;
+   cursor: pointer;
+}
+
+.logo img {
+    height: 100px;
+    width: 70px;
+    margin-top: -30px;
+    margin-left: -40px;
+ }
 
 .overview_box {
     margin-top: -50px;
@@ -148,7 +181,7 @@ small {
     margin-left: 60px;
     margin-right: 60px;
     height: 250px;
-    background-color: #56bccc;
+    background-color: #73D9CF;
 }
 .command-text{
     width: 50%;
@@ -376,70 +409,6 @@ small {
     max-height: 200px;
     margin-top: 15px;
     margin-left: 200px;
-}
-
-/* Dropdown Button */
-.dropbtn {
-    background-color: #F29F05;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    margin-top: -100px;
-    margin-left: 30px;
-}
-  
-  /* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-  
-  /* Links inside the dropdown */
-.dropdown-content a {
-    color: #000000;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-  
-  /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-    background-color: #FFFFFF;
-}
-  
-  /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    background-color: #F29F05;
-}
-
-.menu ul {
-    display: inline-flex;
-    margin: 58px;
-}
-
-.menu ul li {
-   font-size: 20px;
-   font-weight: bold;
-   list-style: none;
-   margin: 0 20px;
-   color: #F29F05;
-   cursor: pointer;
 }
 
 
